--- a/www/CV/index.html
+++ b/www/CV/index.html
@@ -5,9 +5,11 @@
         <meta name="description" content="Raphael Cohen's Curriculum Vitae">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CV | Raphael Cohen</title>
+        <link rel="icon"type="image/png"href="/img/candle.ico">
+
         <link rel="stylesheet" href="../css/CV.css">
     </head>
     <body>
-        
+        <p>CV ;)</p>
     </body>
 </html>
