--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,9 @@
         <meta name="description" content="Raphael D. Cohen">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Raphael Cohen</title>
+
+        <link rel="icon"type="image/png"href="/img/candle.ico">
+
         <link rel="stylesheet" href="css/screen.css">
         
         <script src="js/jquery-1.11.0.min.js"></script>
@@ -42,7 +45,7 @@
         				<a href="/CV">CV</a>
         			</li>
         			<li>
-        				<a id="contact_button" onclick="controller.toggleContact();">Contact</a>
+        				<a onclick="controller.toggleContact();"><span id="contact_button">Contact</span></a>
         			</li>
         			<li>
         				<a href="http://juicysgallery.info/" target="_blank">Juicys Gallery</a>
@@ -62,12 +65,12 @@
                 <h2 class="email">freeraphael8@gmail.com</h2>
             </a>
             <form id="email-form">
-                <label for="email">Sign up for email updates:</label><br>
+                <label for="email">For updates:</label><br>
                 <input class="email-input" type="text" name="email" placeholder="email">
-                <input type="submit" value="Submit">
+                <input type="submit" value="Sign Up">
             </form>
             <p class="builtby">
-                &#169; 2014  |  Site built by <a href="http://eliasmartinezcohen.com/" target="_blank">Elías Martínez Cohen</a>
+                &#169; 2014  |  Site by <a href="http://eliasmartinezcohen.com/" target="_blank">Elías Martínez Cohen</a>
             </p>
         </div>
 
