--- a/www/index.html
+++ b/www/index.html
@@ -2,16 +2,18 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="Raphael D. Cohen">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Raphael D. Cohen">
+        
         <title>Raphael Cohen</title>
 
+        <!-- Favicon + Style -->
         <link rel="icon"type="image/png"href="/img/candle.ico">
-
         <link rel="stylesheet" href="css/screen.css">
         
-        <script src="js/jquery-1.11.0.min.js"></script>
-        <script src="js/main.js"></script>
+        <!-- Scripts -->
+        <script src="/js/jquery-1.11.0.min.js"></script>
+        <script src="/js/main.js"></script>
     </head>
     <body>
         <div id="main" class="main-container center">
@@ -31,12 +33,15 @@
         	    <li>
         	    	<a href="#">Free</a>
         	    </li>
-        	    <li>
+                <li>
+                    <a href="#">Finding Raphael</a>
+                </li>
+        	    <!-- <li>
         	    	<a href="#">Speaking Directly</a>
         	    </li>
         	    <li>
         	    	<a href="#">Diary</a>
-        	    </li>
+        	    </li> -->
         	</ul>
 
         	<footer class="footer">
@@ -64,11 +69,15 @@
             <a href="mailto:freeraphael8@gmail.com">
                 <h2 class="email">freeraphael8@gmail.com</h2>
             </a>
+            <!--
+            * * * * * * * * * * * * * * * * * * * * * * * 
             <form id="email-form">
                 <label for="email">For updates:</label><br>
                 <input class="email-input" type="text" name="email" placeholder="email">
                 <input type="submit" value="Sign Up">
             </form>
+            * * * * * * * * * * * * * * * * * * * * * * * 
+            -->
             <p class="builtby">
                 &#169; 2014  |  Site by <a href="http://eliasmartinezcohen.com/" target="_blank">Elías Martínez Cohen</a>
             </p>
