Ready for deploy

--- a/www/index.html
+++ b/www/index.html
@@ -28,13 +28,13 @@
         	<!-- Some projects -->
             <ul class="project-list">
         	    <li>
-        	    	<a href="#">American Ikebana</a>
+        	    	<a href="/projects/american_ikebana">American Ikebana</a>
         	    </li>
         	    <li>
-        	    	<a href="#">Free</a>
+        	    	<a href="/projects/free">Free</a>
         	    </li>
                 <li>
-                    <a href="#">Finding Raphael</a>
+                    <a href="#" onclick="controller.oops('Finding Raphael soon!')">Finding Raphael</a>
                 </li>
         	    <!-- <li>
         	    	<a href="#">Speaking Directly</a>
