--- a/www/index.html
+++ b/www/index.html
@@ -43,26 +43,6 @@
         	    	<a href="#">Diary</a>
         	    </li> -->
         	</ul>
-
-        	<footer class="footer">
-        		<ul>
-        			<li>
-        				<a href="/CV">CV</a>
-        			</li>
-        			<li>
-        				<a onclick="controller.toggleContact();"><span id="contact_button">Contact</span></a>
-        			</li>
-        			<li>
-        				<a href="http://juicysgallery.info/" target="_blank">Juicys Gallery</a>
-        			</li>
-        			<li>
-        				<a href="http://coorslight.bandcamp.com/" target="_blank">Coors Light</a>
-        			</li>
-        			<li>
-        				<a onclick="controller.oops('Ficus Interfaith R&P\nComing Soon!')">Ficus Interfaith R&amp;P</a>
-        			</li>
-        		</ul>
-        	</footer>
         </div>
         
         <div id="contact" class="contact-container center">
@@ -82,6 +62,26 @@
                 &#169; 2014  |  Site by <a href="http://eliasmartinezcohen.com/" target="_blank">Elías Martínez Cohen</a>
             </p>
         </div>
+
+        <footer class="footer">
+            <ul>
+                <li>
+                    <a href="/CV">CV</a>
+                </li>
+                <li>
+                    <a onclick="controller.toggleContact();"><span id="contact_button">Contact</span></a>
+                </li>
+                <li>
+                    <a href="http://juicysgallery.info/" target="_blank">Juicys Gallery</a>
+                </li>
+                <li>
+                    <a href="http://coorslight.bandcamp.com/" target="_blank">Coors Light</a>
+                </li>
+                <li>
+                    <a onclick="controller.oops('Ficus Interfaith R&amp;P\nComing Soon!')">Ficus Interfaith R&amp;P</a>
+                </li>
+            </ul>
+        </footer>
 
         <script>
             $(function() {
