--- a/www/contact/index.html
+++ b/www/contact/index.html
@@ -2,11 +2,27 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="artist Raphael D. Cohen">
+        
         <title>Contact | Raphael Cohen</title>
+
+        <!-- Favicon + Style -->
+        <link rel="icon"type="image/png"href="/img/candle.ico">
+        <link rel="stylesheet" href="/css/contact.css">
+        
+        <!-- Scripts -->
+        <script src="/js/jquery-1.11.0.min.js"></script>
     </head>
     <body>
-        <script>
-        window.location.href = '/';
-        </script>
+    	<div class="center">
+    		<p>
+    			Raphael Cohen	<br>
+    			<a href="mailto:freeraphael8@gmail.com">freeraphael8 {at} gmail.com</a>
+    		</p>
+    		<p>
+    			Site by <a href="http://eliasmartinezcohen.com/">Elías Martínez Cohen</a>
+    		</p>
+    	</div>
     </body>
 </html>
