--- a/www/projects/index.html
+++ b/www/projects/index.html
@@ -2,11 +2,21 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Projects by artist Raphael Cohen">
+        
         <title>Projects | Raphael Cohen</title>
+
+        <!-- Favicon + Style -->
+        <link rel="icon"type="image/png"href="/img/candle.ico">
+        <link rel="stylesheet" href="/css/project_index.css">
+        
+        <!-- Scripts -->
+        <script src="/js/jquery-1.11.0.min.js"></script>
     </head>
     <body>
-        <script>
-        window.location.href = '/';
-        </script>
+    <ul class="projects-list">
+        <li><a href="/projects/free">Free</a></li>
+    </ul>
     </body>
 </html>
