forgot this even had a git lol

--- a/www/contact/index.html
+++ b/www/contact/index.html
@@ -21,7 +21,7 @@
     			<a href="mailto:freeraphael8@gmail.com">freeraphael8 {at} gmail.com</a>
     		</p>
     		<p>
-    			Site by <a href="http://eliasmartinezcohen.com/">Elías Martínez Cohen</a>
+    			Site by <a href="http://eliath.biz/">Elías Martínez Cohen</a>
     		</p>
     	</div>
     </body>
