--- a/www/projects/free/index.html
+++ b/www/projects/free/index.html
@@ -22,7 +22,7 @@
 
         <script>
             $(function() {
-                slideshow.init("/projects/free/img/");
+                slideshow.init("/projects/Free/img/");
             });
         </script>
     </body>
