--- a/www/projects/index.html
+++ b/www/projects/index.html
@@ -15,8 +15,17 @@
         <script src="/js/jquery-1.11.0.min.js"></script>
     </head>
     <body>
+    <a href="/home" class="back-btn">&larr;</a>
     <ul class="projects-list">
-        <li><a href="/projects/free">Free</a></li>
+        <li><a href="/projects/Clean_Funny">Clean Funny</a></li>
+        <li><a href="/projects/Free">Free</a></li>
+        <li><a href="/projects/Lily_of_the_Valley">Lily of the Valley</a></li>
+        <li><a href="/projects/New_Finding">New Finding</a></li>
+        <li><a href="/projects/New_Never_Fail">New Never Fail</a></li>
+        <li><a href="/projects/New_Walking">New Walking</a></li>
+        <li><a href="/projects/No_Matter_Where_I_Go_There_I_Am">No Matter Where I Go There I Am</a></li>
+        <li><a href="/projects/Still_Life">Still Life</a></li>
+        <li><a href="/projects/Throw_a_ROCK">Throw a ROCK</a></li>
     </ul>
     </body>
 </html>
